--- a/aula06/style.css
+++ b/aula06/style.css
@@ -1,6 +1,4 @@
 body {
-    background-image: url("https://ichef.bbci.co.uk/news/976/cpsprodpb/66D7/production/_129172362_8ec668fdf123370fb76ba84e31605a427b9c115e.jpg");
-    
-    background-repeat: no-repeat;
-    background-size: 100%;
+    text-align: center;
+    text-align: center;
 }
